# UnifAI-MCP

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  COMMIT_MESSAGE.txt  Dockerfile  IMPROVEMENTS.md  PUSH_INSTRUCTIONS.md  README.md  SUMMARY.md  pyproject.toml
helm/: Chart.yaml  values-openshift.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  poddisruptionbudget.yaml  route.yaml  service.yaml  serviceaccount.yaml
src/unifai_mcp/: config.py  server.py  unifai_client.py
src/unifai_mcp/auth/: provider.py  settings.py  token_verifier.py
