[project]
name = "unifai-mcp"
version = "0.1.0"
description = "MCP server for UnifAI multi-agent workflows with Red Hat SSO authentication"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "mcp[server]>=1.28.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.9.0",
]

[project.scripts]
unifai-mcp = "unifai_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unifai_mcp"]
